# minSTL

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: array_lt.h  list_lt.h  string_lt.h  vector.h
test/: test_list.cpp  test_vector.cpp
